fix: Исправлен небольшой notice в новостях fix: Улучшена сортировка товаров каталога add: Начата разработка модуля комментариев add: В модель добавлено название таблицы add: В моделе определен метод find по умолчанию. Он будет производить поиск по id в таблице, которая указана в свойстве $this->table fix: Подправлены стили для админки каталога add: Доработан javascript файл админки для каталога. Добавлена кастомная сортировка товаров. fix: обновлены шаблоны каталога fix: в виджете формы логина исправлено подключение шаблона fix: небольшие доработки .htaccess

--- a/.htaccess
+++ b/.htaccess
@@ -1,21 +1,28 @@
 AddDefaultCharset UTF-8
 AddType text/x-component .htc
 
-php_flag  display_errors				on
-php_value error_reporting				15
+php_flag  display_errors            on
+php_value error_reporting           15
 
 php_flag session.cookie_httponly    off
 php_flag session.use_only_cookies   on
 
-php_value session.name    "sfid"
+php_value session.name              "sfid"
 
 
-php_value magic_quotes_gpc off
-php_value register_globals off
+php_value magic_quotes_gpc          off
+php_value register_globals          off
 
 Options +FollowSymlinks
 Options -MultiViews
 Options -Indexes
+
+# Protect build file
+<Files "build.xml">
+    Order allow,deny
+    Deny from all
+</Files>
+
 
 RewriteEngine on
 
