--- a/.htaccess
+++ b/.htaccess
@@ -1,19 +1,22 @@
 AddDefaultCharset UTF-8
 
-php_flag  display_errors            on
-php_value error_reporting           15
-
-php_flag session.cookie_httponly    off
-php_flag session.use_only_cookies   on
-
-php_value session.name              "sfid"
-
-php_value magic_quotes_gpc          off
-php_value register_globals          off
-
 Options +FollowSymlinks
 Options -MultiViews
 Options -Indexes
+
+<IfModule mod_php5.c>
+    php_admin_flag engine on
+    php_flag  display_errors            on
+    php_value error_reporting           15
+
+    php_flag session.cookie_httponly    off
+    php_flag session.use_only_cookies   on
+
+    php_value session.name              "sfid"
+
+    php_value magic_quotes_gpc          off
+    php_value register_globals          off
+</IfModule>
 
 # Protect build file
 <Files "build.xml">
