--- a/.htaccess
+++ b/.htaccess
@@ -4,7 +4,7 @@ Options +FollowSymlinks
 Options -MultiViews
 Options -Indexes
 
-<IfModule mod_php5.c>
+<IfModule mod_php5>
     php_admin_flag engine on
     php_flag  display_errors            on
     php_value error_reporting           15
