--- a/.htaccess
+++ b/.htaccess
@@ -9,6 +9,9 @@ Options -Indexes
     php_flag  display_errors            on
     php_value error_reporting           15
 
+    php_flag    xdebug.auto_trace   0
+    php_flag    xdebug.remote_enable 0
+
     php_flag session.cookie_httponly    off
     php_flag session.use_only_cookies   on
 
