upd: Перераспределение обязанностей del: Удаление не нужных вещей

--- a/build.xml
+++ b/build.xml
@@ -158,4 +158,16 @@
 
     </target>
 
+    <target name="test">
+        <phpunit bootstrap="test/bootstrap.php">
+            <formatter type="plain" usefile="false"/>
+            <batchtest>
+                <fileset dir="test">
+                    <include name="**/*Test.php"/>
+                </fileset>
+            </batchtest>
+        </phpunit>
+    </target>
+
+
 </project>
