В добавлена интеграция с быстрыми заказами яндекса (адреса) Добавлена возможность фильтрации товаров по производителю Добавлена возможность указывать парметры в Action и уточнять их типы Модуль RSS переписан через DOMDocument В Smarty можно передавать опции конфигурации compile_check и caching Уточнение в корзине (могут лежать 2 одинаковых товара с разными св-ми)

--- a/.htaccess
+++ b/.htaccess
@@ -26,6 +26,7 @@ php_value register_globals          off
 
 RewriteEngine on
 
+RewriteCond %{REQUEST_FILENAME} !^favicon\.ico
 RewriteCond %{SCRIPT_FILENAME} !-f
 RewriteCond %{SCRIPT_FILENAME} !-d
 
