--- a/build.xml
+++ b/build.xml
@@ -206,4 +206,26 @@
     </target>
 
 
+    <target name="minimify">
+        <mkdir dir="_runtime/asset" />
+        <delete file="_runtime/asset/admin.js"/>
+        <delete file="_runtime/asset/require-jquery.js"/>
+        <append destFile="_runtime/asset/require-jquery.js">
+            <fileset dir="misc">
+                <include name="require-jquery.js"/>
+            </fileset>
+        </append>
+        <append destFile="_runtime/asset/admin.js">
+            <fileset dir="misc">
+                <include name="admin/*.js"/>
+            </fileset>
+        </append>
+        <jsMin targetDir="_runtime/asset" failOnError="true">
+            <fileset dir="_runtime/asset">
+                <include name="require-jquery.js"/>
+                <include name="admin.js"/>
+            </fileset>
+        </jsMin>
+    </target>
+
 </project>
