--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name" : "keltanas/SiteForeverCMS",
+    "name" : "keltanas/site-forever-cms",
     "keywords": [ "siteforever", "cms", "keltanas" ],
     "homepage": "http://siteforever.ru",
     "license": "MIT",
