correct module loader

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
-/.idea*
-/_runtime*
-/protected/_runtime*
-/files*
-/thumbs*
+/.idea/
+/runtime/
+/files/
+/thumbs/
 /logger.txt
 /vendor/
 /static/
