Template driver refactoring. Add lang modifier. Add masked jquery plugin. Add backbone. Fix search and sitemap.

--- a/.htaccess
+++ b/.htaccess
@@ -23,6 +23,14 @@ php_value register_globals          off
     Order allow,deny
     Deny from all
 </Files>
+#<Directory "/vendor">
+#    Order allow,deny
+#    Deny from all
+#</Directory>
+#<Directory "/class">
+#    Order allow,deny
+#    Deny from all
+#</Directory>
 
 RewriteEngine on
 RewriteBase /
