--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,7 @@ php:
   - "5.5"
   - "5.4"
   - "5.3"
+script: vendor/bin/phpunit -c test/
+before_script:
+  - sh -c "mysql -e 'create database IF NOT EXISTS siteforever_test;'"
+  - composer install --prefer-source --dev
