--- a/composer.json
+++ b/composer.json
@@ -49,7 +49,10 @@
         "symfony/http-foundation": "2.3.*",
         "symfony/process": "2.3.*",
         "symfony/security": "2.3.*",
-
+        "symfony/stopwatch": "master-dev",
+        "symfony/debug": " 2.3.*@dev",
+        "symfony/dependency-injection": "2.3.*",
+        "symfony/yaml": "2.3.*",
         "smarty/smarty": "3.1.*",
         "twitter/bootstrap": "v2.3.1",
         "firephp/firephp-core": "v0.4.0",
@@ -57,10 +60,7 @@
         "tonytomov/jqGrid" : "4.4",
         "helios-ag/fm-elfinder": "2.*@dev",
         "swiftmailer/swiftmailer": "v5.0.0",
-        "kriswallsmith/assetic": "v1.1.1",
-        "symfony/stopwatch": "master-dev",
-        "symfony/debug": " 2.3.*@dev",
-        "symfony/dependency-injection": " 2.3.*@dev"
+        "kriswallsmith/assetic": "v1.1.1"
     },
     "repositories":[
         {
