--- a/composer.json
+++ b/composer.json
@@ -49,7 +49,7 @@
         "symfony/http-foundation": "2.3.*",
         "symfony/process": "2.3.*",
         "symfony/security": "2.3.*",
-        "symfony/stopwatch": "master-dev",
+        "symfony/stopwatch": "2.4.*@dev",
         "symfony/debug": " 2.3.*@dev",
         "symfony/dependency-injection": "2.3.*",
         "symfony/yaml": "2.3.*",
