--- a/composer.json
+++ b/composer.json
@@ -49,8 +49,6 @@
         "symfony/http-foundation": "2.3.*",
         "symfony/process": "2.3.*",
         "symfony/security": "2.3.*",
-        "symfony/stopwatch": "2.4.*@dev",
-        "symfony/debug": " 2.3.*@dev",
         "symfony/dependency-injection": "2.3.*",
         "symfony/yaml": "2.3.*",
         "smarty/smarty": "3.1.*",
@@ -58,9 +56,11 @@
         "firephp/firephp-core": "v0.4.0",
         "ccampbell/chromephp": "4.0.0",
         "tonytomov/jqGrid" : "4.4",
-        "helios-ag/fm-elfinder": "2.*@dev",
         "swiftmailer/swiftmailer": "v5.0.0",
-        "kriswallsmith/assetic": "v1.1.1"
+        "kriswallsmith/assetic": "v1.1.1",
+        "symfony/stopwatch": "2.3.*",
+        "symfony/debug": " 2.3.*",
+        "helios-ag/fm-elfinder": "v2.0"
     },
     "repositories":[
         {
