Fixed boot config. Supplement installation command.

--- a/app/services.yml
+++ b/app/services.yml
@@ -13,7 +13,7 @@ parameters:
         cache:
             livetime: %cache_livecycle%
 
-    static_dir: .
+    static_dir: static
 
 services:
     smarty:
